feat: expand chat persistence with conversation entries (issue 591) (#64)
* feat: add conversation entry entity, dao and service

* feat: added service implementation and unit tests, adjusted api definision

* feat: two more tests for cumulative&monotonic check

* feat: fixed liquibase check issue

* feat: fixed sonar issue

* feat: fixed formatting issue

* feat: resetExpectation adjusted

* feat: fix failed expectations issue

* feat: adjusted tests coverage

* feat: adjusted tests coverage

* feat: MR remarks - conflict exception added

* feat: MR remarks - conflict exception added

* feat: MR remarks - fixed failed test

* feat: MR remarks - test why test fails

* feat: MR remarks - reverted

* feat: MR remarks - pessimistic lock for sequence counting added

* feat: MR remarks - removed unnecessary catch from service
